Added - friendSearch|UserFetch|TransactionFetch

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,8 +28,8 @@
             android:layout_weight="1"
             android:layout_alignParentBottom="true"
             app:itemBackground="@color/colorPrimary"
-            app:itemIconTint="@android:color/background_dark"
-            app:itemTextColor="@android:color/black"
+            app:itemIconTint="@color/material_blue"
+            app:itemTextColor="@color/material_blue"
             app:menu="@menu/menu_bottom_nav" />
 
     </LinearLayout>
