--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -19,16 +19,18 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
                 android:layout_marginLeft="10dp"
                 android:id="@+id/iv_user_image"
                 android:layout_width="200dp"
                 android:src="@drawable/splash_icon"
-                android:layout_height="200dp" />
+                android:layout_height="wrap_content" />
 
             <TextView
                 android:id="@+id/tv_user_name"
                 android:textColor="@color/white"
-                android:layout_marginTop="70dp"
+                android:layout_gravity="center_vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -52,12 +54,33 @@
                 android:layout_width="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_height="0dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="15dp"
+                android:layout_gravity="center_horizontal"
                 android:layout_weight="1"
-                android:text="Today's Expense"
+                android:text="Dashboard"
                 android:textColor="@color/material_blue"
                 android:textSize="18sp"
                 android:textStyle="bold" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_weight="6"
+                android:orientation="horizontal"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_weight="1"
+                    android:text="Today's Expense"
+                    android:textColor="@color/material_blue"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
 
         </LinearLayout>
 
