--- a/app/src/main/res/layout/activity_transaction.xml
+++ b/app/src/main/res/layout/activity_transaction.xml
@@ -38,6 +38,7 @@
             android:layout_weight="2">
 
             <ImageView
+                android:id="@+id/iv_friend"
                 android:src="@drawable/splash_icon"
                 android:layout_width="200dp"
                 android:layout_gravity="center_horizontal"
