--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/material_blue"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/material_blue"
     tools:context=".view.fragment.HomeFragment">
 
     <LinearLayout
@@ -12,32 +13,32 @@
         android:orientation="vertical">
 
         <LinearLayout
-            android:background="@color/material_blue"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
+            android:background="@color/material_blue"
             android:orientation="horizontal">
 
             <ImageView
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="20dp"
-                android:layout_marginLeft="10dp"
                 android:id="@+id/iv_user_image"
                 android:layout_width="200dp"
-                android:src="@drawable/splash_icon"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                android:src="@drawable/splash_icon" />
 
             <TextView
                 android:id="@+id/tv_user_name"
-                android:textColor="@color/white"
-                android:layout_gravity="center_vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginRight="10dp"
                 android:layout_weight="1"
                 android:text="username"
                 android:textAlignment="center"
+                android:textColor="@color/white"
                 android:textSize="24sp"
-                android:layout_marginRight="10dp"
                 android:textStyle="bold" />
 
 
@@ -45,48 +46,132 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:background = "@drawable/round_background"
             android:layout_height="0dp"
-            android:orientation="vertical"
-            android:layout_weight="3">
+            android:layout_weight="3"
+            android:background="@drawable/round_background"
+            android:orientation="vertical">
 
             <TextView
                 android:layout_width="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_height="0dp"
-                android:layout_marginTop="15dp"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_weight="1"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="15sp"
                 android:text="Dashboard"
                 android:textColor="@color/material_blue"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
-            <LinearLayout
+            <androidx.core.widget.NestedScrollView
                 android:layout_width="match_parent"
-                android:layout_weight="6"
-                android:orientation="horizontal"
-                android:layout_height="wrap_content">
+                android:layout_height="match_parent"
+                android:background="@color/white"
+                android:fillViewport="true">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:layout_weight="1"
-                    android:text="Today's Expense"
-                    android:textColor="@color/material_blue"
-                    android:textSize="18sp"
-                    android:textStyle="bold" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:orientation="vertical"
+                    android:layout_height="match_parent">
 
-                <Button
-                    android:id="@+id/timepass"
-                    android:text="timepass"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    <com.anychart.AnyChartView
+                        android:id="@+id/any_chart_view"
+                        android:layout_margin="10dp"
+                        android:layout_width="match_parent"
+                        android:layout_weight="30"
+                        android:layout_height="0dp" />
 
-            </LinearLayout>
 
+                    <LinearLayout
+                        android:id="@+id/layout_data_home"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="7"
+                        android:orientation="vertical">
+
+                        <LinearLayout
+                            android:layout_weight="1"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="10dp"
+                            android:layout_marginTop="10dp"
+                            android:layout_weight="1"
+                            android:text="Today's Expense"
+                            android:textColor="@color/material_blue"
+                            android:textSize="24dp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/tv_todays_expense"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:layout_marginTop="10dp"
+                            android:text="Amount"
+                            android:textSize="24dp"
+                            android:textStyle="bold"
+                            android:textColor="@color/material_green"/>
+
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_weight="1"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="10dp"
+                            android:layout_marginTop="10dp"
+                            android:layout_weight="1"
+                            android:text="Months's Expense"
+                            android:textColor="@color/material_blue"
+                            android:textSize="24dp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/tv_monthly_expense"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:layout_marginTop="10dp"
+                            android:text="Amount"
+                            android:textSize="24dp"
+                            android:textStyle="bold"
+                            android:textColor="@color/material_green"/>
+
+
+                    </LinearLayout>
+                    </LinearLayout>
+
+                    <com.cooltechworks.views.shimmer.ShimmerRecyclerView
+                        android:id="@+id/shimmer_recycler_view"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="6"
+                        app:shimmer_demo_angle="20"
+                        app:shimmer_demo_child_count="10"
+                        app:shimmer_demo_grid_child_count="2"
+                        app:shimmer_demo_layout_manager_type="linear_vertical" />
+
+                    <ImageView
+                        android:id="@+id/iv_error"
+                        android:visibility="gone"
+                        android:layout_margin="10dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="6"
+                        android:src="@drawable/error_image"/>
+
+                </LinearLayout>
+
+            </androidx.core.widget.NestedScrollView>
 
         </LinearLayout>
 
