--- a/app/src/main/res/layout/item_transaction.xml
+++ b/app/src/main/res/layout/item_transaction.xml
@@ -30,6 +30,7 @@
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:textAlignment="center"
+            android:layout_gravity="center_vertical"
             android:layout_weight="1"
             android:textSize="18dp"
             android:text="Date"
@@ -49,6 +50,7 @@
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:textAlignment="center"
+            android:layout_gravity="center_vertical"
             android:layout_weight="1"
             android:textSize="24dp"
             android:text="Amount"
