--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,8 @@
     <color name="material_black">#272727</color>
     <color name="material_blue">#6C63FF</color>
     <color name="white">#FFFFFF</color>
-    <color name="material_grey">#ffcdd2</color>
+    <color name="material_grey">#ffebee</color>
+    <color name="material_dark_grey">#ccb9bc</color>
     <color name="material_red">#d32f2f</color>
     <color name="material_green">#4CAF50</color>
 
