--- a/app/src/main/res/drawable/item_round_background.xml
+++ b/app/src/main/res/drawable/item_round_background.xml
@@ -1,7 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/material_blue" />
+    <solid android:color="@color/material_grey" />
     <corners android:topLeftRadius="10dp" android:topRightRadius="10dp"
         android:bottomLeftRadius="10dp" android:bottomRightRadius="10dp"/>
 </shape>
