--- a/app/src/main/res/layout/item_transaction.xml
+++ b/app/src/main/res/layout/item_transaction.xml
@@ -1,40 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_margin="5dp"
-    android:layout_height="100dp"
+    android:layout_margin="2.5dp"
+    android:layout_height="90dp"
+    android:elevation="5dp"
     android:background="@drawable/item_round_background"
     android:orientation="horizontal">
 
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="3"
+        android:layout_weight="2"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/item_title"
-            android:layout_margin="10dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="15dp"
             android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:textAlignment="center"
+            android:layout_height="wrap_content"
             android:text="Title"
-            android:textColor="@color/white"
+            android:textColor="@color/material_blue"
             android:textSize="24dp"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/item_date"
-            android:layout_margin="10dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="10dp"
+            android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:textAlignment="center"
             android:layout_gravity="center_vertical"
-            android:layout_weight="1"
             android:textSize="18dp"
             android:text="Date"
-            android:textColor="@color/white" />
+            android:textColor="@color/material_dark_grey" />
 
     </LinearLayout>
 
@@ -42,19 +41,26 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:orientation="vertical">
+        android:orientation="horizontal">
+
+        <TextView
+            android:text="₹"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="5dp"
+            android:textSize="24sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
 
         <TextView
             android:id="@+id/item_amount"
-            android:layout_margin="10dp"
             android:layout_width="wrap_content"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:textAlignment="center"
             android:layout_gravity="center_vertical"
-            android:layout_weight="1"
             android:textSize="24dp"
             android:text="Amount"
-            android:textColor="@color/white" />
+            android:textColor="@color/material_green" />
 
 
     </LinearLayout>
