--- a/app/src/main/res/layout/popup_user.xml
+++ b/app/src/main/res/layout/popup_user.xml
@@ -50,6 +50,7 @@
         </LinearLayout>
 
         <LinearLayout
+
             android:id="@+id/layout_found"
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -60,7 +61,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="1"
+                android:layout_weight="0.8"
                 android:orientation="horizontal">
 
                 <TextView
@@ -79,8 +80,9 @@
                 <Button
                     android:id="@+id/btn_yes_"
                     android:layout_marginRight="10dp"
+                    android:layout_gravity="center_vertical"
                     android:background="@drawable/ic_check_circle"
-                    android:layout_weight="1"
+                    android:layout_weight="1.5"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"/>
 
@@ -94,6 +96,7 @@
                 android:background="@drawable/round_button_background"
                 android:layout_gravity="center_horizontal"
                 android:text="Search Again"
+                android:layout_marginBottom="10dp"
                 android:textAllCaps="false"
                 android:textColor="@color/white" />
 
