--- a/app/src/main/res/layout/item_transaction.xml
+++ b/app/src/main/res/layout/item_transaction.xml
@@ -21,8 +21,7 @@
             android:layout_height="wrap_content"
             android:text="Title"
             android:textColor="@color/material_blue"
-            android:textSize="24dp"
-            android:textStyle="bold" />
+            android:textSize="24dp" />
 
         <TextView
             android:id="@+id/item_date"
