--- a/app/src/main/res/layout/popup_transaction.xml
+++ b/app/src/main/res/layout/popup_transaction.xml
@@ -6,7 +6,7 @@
         android:layout_width="match_parent"
         android:orientation="vertical"
         android:background="@color/fui_transparent"
-        android:layout_height="200dp">
+        android:layout_height="270dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -21,6 +21,20 @@
             android:orientation="vertical"
             android:background="@drawable/bottom_round_popup">
 
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/popup_description"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Add Description" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
@@ -29,13 +43,26 @@
                 android:layout_margin="10dp">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/popup_amount"
                     android:layout_width="match_parent"
+                    android:inputType="number"
                     android:layout_height="wrap_content"
                     android:hint="Enter Transaction Amount" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
+            <TextView
+                android:id="@+id/tv_progress"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="Loading"
+                android:textColor="@color/material_blue"
+                android:textSize="24sp"
+                android:textStyle="bold" />
+
             <Button
+                android:id="@+id/popup_add_transaction"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:background="@drawable/round_button_background"
