redesigned error layout | added mobile number

--- a/app/src/main/res/layout/alert_set_upi_id.xml
+++ b/app/src/main/res/layout/alert_set_upi_id.xml
@@ -25,9 +25,24 @@
                     android:id="@+id/et_upi_id"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Enter your UPI ID" />
+                    android:hint="UPI ID" />
 
             </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/et_login_mobile"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="number"
+                android:hint="Mobile Number" />
+
+        </com.google.android.material.textfield.TextInputLayout>
 
         </LinearLayout>
 
