--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,6 +8,8 @@
     tools:context=".view.fragment.HomeFragment">
 
 
+
+
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipe_container"
         android:layout_height="match_parent"
@@ -186,14 +188,11 @@
                         app:shimmer_demo_grid_child_count="2"
                         app:shimmer_demo_layout_manager_type="linear_vertical" />
 
-                    <ImageView
-                        android:id="@+id/iv_error"
-                        android:visibility="gone"
-                        android:layout_margin="10dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="6"
-                        android:src="@drawable/error_image"/>
+                    <include
+                        android:id="@+id/error_layout"
+                        android:layout_width="fill_parent"
+                        android:layout_height="match_parent"
+                        layout="@layout/error_layout" />
 
                 </LinearLayout>
 
