added animations | updata data models

--- a/app/src/main/res/layout/activity_transaction.xml
+++ b/app/src/main/res/layout/activity_transaction.xml
@@ -64,6 +64,12 @@
                     android:layout_height="match_parent"
                     layout="@layout/error_layout" />
 
+                <include
+                    android:id="@+id/not_found"
+                    android:layout_width="fill_parent"
+                    android:layout_height="match_parent"
+                    layout="@layout/not_found_layout" />
+
                 <androidx.core.widget.NestedScrollView
                     android:id="@+id/loading_layout"
                     android:layout_width="wrap_content"
