--- a/app/src/main/res/layout/alert_set_upi_id.xml
+++ b/app/src/main/res/layout/alert_set_upi_id.xml
@@ -6,14 +6,13 @@
         android:layout_width="match_parent"
         android:orientation="vertical"
         android:background="@color/fui_transparent"
-        android:layout_height="150dp">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="0.5"
             android:background="@color/material_blue"/>
-
 
         <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
