--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -49,7 +49,6 @@
                 android:textSize="24sp"
                 android:textStyle="bold" />
 
-
         </LinearLayout>
 
         <LinearLayout
@@ -79,7 +78,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:orientation="vertical"
-                    android:layout_height="match_parent">
+                    android:layout_height="wrap_content">
 
                     <com.anychart.AnyChartView
                         android:id="@+id/any_chart_view"
@@ -109,7 +108,7 @@
                             android:layout_weight="1"
                             android:text="Today's Expense"
                             android:textColor="@color/material_blue"
-                            android:textSize="24dp"
+                            android:textSize="20dp"
                             android:textStyle="bold" />
 
                             <TextView
@@ -119,7 +118,7 @@
                                 android:text="₹"
                                 android:layout_marginRight="10dp"
                                 android:textColor="@color/material_red"
-                                android:textSize="24dp"
+                                android:textSize="20dp"
                                 android:textStyle="bold" />
 
                         <TextView
@@ -129,7 +128,7 @@
                             android:layout_weight="1"
                             android:layout_marginTop="10dp"
                             android:text="Amount"
-                            android:textSize="24dp"
+                            android:textSize="20dp"
                             android:textStyle="bold"
                             android:textColor="@color/material_green"/>
 
@@ -149,7 +148,7 @@
                             android:layout_weight="1"
                             android:text="Month's Expense"
                             android:textColor="@color/material_blue"
-                            android:textSize="24dp"
+                            android:textSize="20dp"
                             android:textStyle="bold" />
 
 
@@ -160,7 +159,7 @@
                                 android:text="₹"
                                 android:layout_marginRight="10dp"
                                 android:textColor="@color/material_red"
-                                android:textSize="24dp"
+                                android:textSize="20dp"
                                 android:textStyle="bold" />
 
                         <TextView
@@ -170,13 +169,56 @@
                             android:layout_weight="1"
                             android:layout_marginTop="10dp"
                             android:text="Amount"
-                            android:textSize="24dp"
+                            android:textSize="20dp"
                             android:textStyle="bold"
                             android:textColor="@color/material_green"/>
 
 
                     </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_weight="1"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="10dp"
+                                android:layout_marginTop="10dp"
+                                android:layout_weight="1"
+                                android:text="Average Expense"
+                                android:textColor="@color/material_blue"
+                                android:textSize="20dp"
+                                android:textStyle="bold" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="10dp"
+                                android:text="₹"
+                                android:layout_marginRight="10dp"
+                                android:textColor="@color/material_red"
+                                android:textSize="20dp"
+                                android:textStyle="bold" />
+
+                            <TextView
+                                android:id="@+id/tv_avg_expense"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:layout_marginTop="10dp"
+                                android:text="Amount"
+                                android:textSize="20dp"
+                                android:textStyle="bold"
+                                android:textColor="@color/material_green"/>
+
+                        </LinearLayout>
+
+
                     </LinearLayout>
+
 
                     <com.cooltechworks.views.shimmer.ShimmerRecyclerView
                         android:id="@+id/shimmer_recycler_view"
