--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_margin="4dp"
     android:layout_height="100dp"
-    android:background="@drawable/item_round_background"
+    android:background="@color/white"
     android:orientation="horizontal">
 
     <ImageView
