--- a/app/src/main/res/layout/popup_transaction.xml
+++ b/app/src/main/res/layout/popup_transaction.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="270dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -11,10 +13,11 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_weight="0.8"
             android:background="@drawable/top_round_popup"/>
 
         <LinearLayout
+            android:id="@+id/add_transaction_layout"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="3.5"
@@ -49,21 +52,14 @@
                     android:layout_height="wrap_content"
                     android:hint="Enter Transaction Amount" />
 
+
             </com.google.android.material.textfield.TextInputLayout>
 
-            <TextView
-                android:id="@+id/tv_progress"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:text="Loading"
-                android:textColor="@color/material_blue"
-                android:textSize="24sp"
-                android:textStyle="bold" />
 
             <Button
                 android:id="@+id/popup_add_transaction"
                 android:layout_width="150dp"
+                android:layout_marginBottom="10dp"
                 android:layout_height="wrap_content"
                 android:background="@drawable/round_button_background"
                 android:layout_gravity="center_horizontal"
@@ -72,6 +68,47 @@
                 android:textColor="@color/white" />
 
         </LinearLayout>
+
+
+        <RelativeLayout
+            android:id="@+id/transaction_loading"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="3.5"
+            android:orientation="vertical"
+            android:background="@drawable/bottom_round_popup">
+
+
+            <ProgressBar
+                android:id="@+id/add_transaction_progress"
+                android:layout_width="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:layout_height="wrap_content" />
+
+            <com.airbnb.lottie.LottieAnimationView
+                android:id="@+id/done_adding_transaction"
+                app:lottie_autoPlay="true"
+                app:lottie_fileName="check_mark.json"
+                app:lottie_loop="true"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:layout_above="@+id/add_transaction_progress" />
+
+            <com.airbnb.lottie.LottieAnimationView
+                android:id="@+id/error_adding_animation"
+                app:lottie_autoPlay="true"
+                app:lottie_fileName="error_animation.json"
+                app:lottie_loop="true"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_above="@+id/add_transaction_progress" />
+
+        </RelativeLayout>
 
     </LinearLayout>
 
