--- a/app/src/main/res/layout/popup_user.xml
+++ b/app/src/main/res/layout/popup_user.xml
@@ -25,28 +25,30 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-            <Button
-                android:id="@+id/bt_search_username"
-                android:layout_marginTop="10dp"
-                android:layout_width="150dp"
-                android:layout_height="wrap_content"
-                android:background="@drawable/round_button_background"
-                android:text="Username"
-                android:layout_marginBottom="10dp"
-                android:textAllCaps="false"
-                android:textColor="@color/white" />
+                <Button
+                    android:id="@+id/bt_search_username"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:background="@drawable/round_button_background"
+                    android:text="Username"
+                    android:textAllCaps="false"
+                    android:textColor="@color/white"
+                    android:textSize="12sp" />
 
-            <Button
-                android:id="@+id/bt_search_phone_number"
-                android:layout_marginTop="10dp"
-                android:layout_width="150dp"
-                android:layout_marginLeft="15dp"
-                android:layout_height="wrap_content"
-                android:background="@drawable/round_button_background"
-                android:text="Phone Number"
-                android:layout_marginBottom="10dp"
-                android:textAllCaps="false"
-                android:textColor="@color/white" />
+                <Button
+                    android:id="@+id/bt_search_phone_number"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:background="@drawable/round_button_background"
+                    android:text="Phone Number"
+                    android:textAllCaps="false"
+                    android:textColor="@color/white"
+                    android:textSize="12sp" />
 
             </LinearLayout>
 
@@ -91,6 +93,7 @@
                     android:id="@+id/et_friend_phone_number"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:inputType="number"
                     android:hint="Phone Number" />
 
             </com.google.android.material.textfield.TextInputLayout>
